Visual article fixes Improve block quote appearance (and name consistently as block instead of pull quote). Closes #26 "clear" fixes image/author info overlap. Closes #22 Add float clears for images/pull quotes. For #25 (but haven't done it for headers). Fix right-aligned image margin. Closes #28.

--- a/tribune/static/sass/mystyles.scss
+++ b/tribune/static/sass/mystyles.scss
@@ -12,7 +12,7 @@ $navbar-height: 10rem;
 $green: #03bc25;
 $green-invert: findColorInvert($green);
 
-$blue: #3A93F2 ;
+$blue: #3A93F2;
 $blue-invert: findColorInvert($blue);
 $orange: #F18F01;
 $orange-invert: findColorInvert($orange);
@@ -26,6 +26,7 @@ $size-8: 0.5rem;
 $family-sans-serif: 'Montserrat', sans-serif;
 $family-title: 'Montserrat', serif;
 $family-subtitle: 'Space Mono', sans-serif;
+$family-monospace: 'Space Mono', monospace;
 
 $title-weight: 500;
 $subtitle-weight: $weight-normal;
@@ -210,13 +211,15 @@ a {
             float: left;
             margin-right: 1.5rem;
             width: calc(50% - 1.5rem);
+            clear: left;
         }
     }
     &.right {
         @include tablet {
             float: right;
-            margin-right: 1.5rem;
+            margin-left: 1.5rem;
             width: calc(50% - 1.5rem);
+            clear: right;
         }
     }
     &.centered {
@@ -286,11 +289,16 @@ a {
         * {
             border: none;
         }
-        td {padding: 0;}
+        td {
+            padding: 0;
+            .linenodiv pre {padding-left: 1em;}
+            .highlight pre {padding-left: 0;}
+        }
     }
 
     .card.is-author p {
         margin: 0;
+        clear: both;
     }
 }
 
@@ -312,79 +320,49 @@ a {
     }
 }
 
+// Block quotes
+
+// $content-blockquote-background-color: none;
+$content-blockquote-border-left: 8px solid $green;
+$content-blockquote-padding: 1.25em 1.5em;
+.content blockquote.block-quote{
+    clear: both;
+    background-color: none;
+    padding: 2em;
+    padding-left: 3.5em;
+    margin: 3em 0;
+    font-style: italic;
+    font-size: 1.15em;
+    position: relative;
+    &::before {
+        font-style: normal;
+        font-family: $family-subtitle;
+        content: "\201C";
+        content: "\201C";
+        color: $green;
+        font-size:5em;
+        position: absolute;
+        left: 8px;
+        top: 16px;
+        line-height: 100%;
+    }
+    .quote-author {
+        font-weight: 600;
+        margin: 0;
+        margin-top: 2em;
+        font-style: normal;
+        font-size: .8em;
+    //     font-size: 1rem;
+    //     text-align: right;
+    //     font-style: italic;
+    }
+}
+
 
 // Syntax highlighting
 
-
-// .highlight, .highlight pre {
-//     .c { color: #75715e } /* Comment */
-//     .err { color: #960050; background-color: #1e0010 } /* Error */
-//     .k { color: #00a8c8 } /* Keyword */
-//     .l { color: #ae81ff } /* Literal */
-//     .n { color: #111111 } /* Name */
-//     .o { color: #f92672 } /* Operator */
-//     .p { color: #111111 } /* Punctuation */
-//     .ch { color: #75715e } /* Comment.Hashbang */
-//     .cm { color: #75715e } /* Comment.Multiline */
-//     .cp { color: #75715e } /* Comment.Preproc */
-//     .cpf { color: #75715e } /* Comment.PreprocFile */
-//     .c1 { color: #75715e } /* Comment.Single */
-//     .cs { color: #75715e } /* Comment.Special */
-//     .ge { font-style: italic } /* Generic.Emph */
-//     .gs { font-weight: bold } /* Generic.Strong */
-//     .kc { color: #00a8c8 } /* Keyword.Constant */
-//     .kd { color: #00a8c8 } /* Keyword.Declaration */
-//     .kn { color: #f92672 } /* Keyword.Namespace */
-//     .kp { color: #00a8c8 } /* Keyword.Pseudo */
-//     .kr { color: #00a8c8 } /* Keyword.Reserved */
-//     .kt { color: #00a8c8 } /* Keyword.Type */
-//     .ld { color: #d88200 } /* Literal.Date */
-//     .m { color: #ae81ff } /* Literal.Number */
-//     .s { color: #d88200 } /* Literal.String */
-//     .na { color: #75af00 } /* Name.Attribute */
-//     .nb { color: #111111 } /* Name.Builtin */
-//     .nc { color: #75af00 } /* Name.Class */
-//     .no { color: #00a8c8 } /* Name.Constant */
-//     .nd { color: #75af00 } /* Name.Decorator */
-//     .ni { color: #111111 } /* Name.Entity */
-//     .ne { color: #75af00 } /* Name.Exception */
-//     .nf { color: #75af00 } /* Name.Function */
-//     .nl { color: #111111 } /* Name.Label */
-//     .nn { color: #111111 } /* Name.Namespace */
-//     .nx { color: #75af00 } /* Name.Other */
-//     .py { color: #111111 } /* Name.Property */
-//     .nt { color: #f92672 } /* Name.Tag */
-//     .nv { color: #111111 } /* Name.Variable */
-//     .ow { color: #f92672 } /* Operator.Word */
-//     .w { color: #272822 } /* Text.Whitespace */
-//     .mb { color: #ae81ff } /* Literal.Number.Bin */
-//     .mf { color: #ae81ff } /* Literal.Number.Float */
-//     .mh { color: #ae81ff } /* Literal.Number.Hex */
-//     .mi { color: #ae81ff } /* Literal.Number.Integer */
-//     .mo { color: #ae81ff } /* Literal.Number.Oct */
-//     .sa { color: #d88200 } /* Literal.String.Affix */
-//     .sb { color: #d88200 } /* Literal.String.Backtick */
-//     .sc { color: #d88200 } /* Literal.String.Char */
-//     .dl { color: #d88200 } /* Literal.String.Delimiter */
-//     .sd { color: #d88200 } /* Literal.String.Doc */
-//     .s2 { color: #d88200 } /* Literal.String.Double */
-//     .se { color: #8045FF } /* Literal.String.Escape */
-//     .sh { color: #d88200 } /* Literal.String.Heredoc */
-//     .si { color: #d88200 } /* Literal.String.Interpol */
-//     .sx { color: #d88200 } /* Literal.String.Other */
-//     .sr { color: #d88200 } /* Literal.String.Regex */
-//     .s1 { color: #d88200 } /* Literal.String.Single */
-//     .ss { color: #d88200 } /* Literal.String.Symbol */
-//     .bp { color: #111111 } /* Name.Builtin.Pseudo */
-//     .fm { color: #75af00 } /* Name.Function.Magic */
-//     .vc { color: #111111 } /* Name.Variable.Class */
-//     .vg { color: #111111 } /* Name.Variable.Global */
-//     .vi { color: #111111 } /* Name.Variable.Instance */
-//     .vm { color: #111111 } /* Name.Variable.Magic */
-//     .il { color: #ae81ff } /* Literal.Number.Integer.Long */
-// }
-
 .highlight, .highlight pre {
+    font-variant-ligatures: none;
     .c { color: $grey-light } /* Comment */
     .ch { color: $grey-light } /* Comment.Hashbang */
     .cm { color: $grey-light } /* Comment.Multiline */
@@ -449,7 +427,7 @@ a {
     .w { color: #272822 } /* Text.Whitespace */
 
     .n { color:  $dark } /* Name */
-    .p { color:   $dark } /* Punctuation */
+    .p { color:   $grey } /* Punctuation */
     .nb { color:   $dark } /* Name.Builtin */
     .ni { color:   $dark } /* Name.Entity */
     .nl { color:   $dark } /* Name.Label */
